<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/find_food"
        android:onClick="search_food"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list"
        android:onClick="sendMessage" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/button_info"
        android:onClick="sendMessage" />
</LinearLayout>

